WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197720
CSSFontFaceSource fails to compile when !ENABLE(SVG_FONTS)
https://bugs.webkit.org/show_bug.cgi?id=197720
Summary
CSSFontFaceSource fails to compile when !ENABLE(SVG_FONTS)
Don Olmstead
Reported
2019-05-08 15:31:46 PDT
CSSFontFaceSource::font won't compile
Attachments
Patch
(1.16 KB, patch)
2019-05-08 15:36 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2019-05-08 15:36:04 PDT
Created
attachment 369436
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-08 16:42:56 PDT
Comment on
attachment 369436
[details]
Patch Clearing flags on attachment: 369436 Committed
r245078
: <
https://trac.webkit.org/changeset/245078
>
WebKit Commit Bot
Comment 3
2019-05-08 16:42:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-08 16:43:20 PDT
<
rdar://problem/50602587
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug