CSSFontFaceSource fails to compile when !ENABLE(SVG_FONTS) https://bugs.webkit.org/show_bug.cgi?id=197720

Unreviewed build fix.

Add usesInDocumentSVGFont to the !ENABLE(SVG_FONT) path.


* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::font):


Canonical link: https://commits.webkit.org/211857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245078 268f45cc-cd09-0410-ab3c-d52691b4dbfc